# JVSCore

./: .gitignore  CMakeLists.txt  Makefile  README.md  style.md
.github/workflows/: build.yml  ccpp.yml
docs/: jvscore.conf  jvscore.service
include/: config.h  constants.h  device.h  input.h  jvs.h  jvscore.h  version.h.in
src/: config.c  device.c  input.c  jvs.c  jvscore.c
